--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -9,7 +9,7 @@
 .carousel-caption .m-title,
 .carousel-caption .m-description{
     margin: 0 0 5px;
-    text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.8)
+    text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.8);
 }
 
 .btn-booknow {
