--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -1,8 +1,8 @@
 .carousel-item img {
     width: 100%;
     height: auto;
-    max-height: 100vh;
-    object-fit: cover;
+    max-height: 90vh;
+    background-size: cover;
     background-color: black;
 }
 
