--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,12 @@
+body{
+    background: url('../images/2.jpg') rgba(0, 0, 0, 0.3);
+    background-blend-mode: multiply;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 #cinemas-cards .cc-type,
 #cinemas-cards .cc-short,
 #cinemas-cards .cc-descrip{
