feat: dynamic display movie showtimes based on selected date
1. Dynamic generate 12 days of date API
2. Dynamic display movie showtimes API
3. Sort the showtimes by city and show_time
4. Filter movie showtimes based on selected regions

--- a/public/css/movies/details.css
+++ b/public/css/movies/details.css
@@ -221,7 +221,7 @@
 }
 
 /* Dropdown container */
-.custom-dropdown {
+.region-dropdown {
     position: relative;
     width: 200px;
     font-family: Arial, sans-serif;
