--- a/public/css/movies/seats.css
+++ b/public/css/movies/seats.css
@@ -95,7 +95,7 @@
     align-items: center;
     margin: 16px 0 0 0;
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     text-transform: uppercase;
 }
@@ -111,4 +111,96 @@
 
 .movie-banner_info-movie-group i{
     margin-right: 10px;
+}
+
+.ticketing-journey-select-seats_legends{
+    margin: 60px 0 0 0;
+}
+
+.ticketing-journey-select-seats_legends-inner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    padding-right: unset;
+    flex-wrap: wrap;
+    column-gap: 33px;
+    row-gap: 15px;
+    overflow: unset;
+    white-space: normal;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.ticketing-journey-select-seats_legend.ng-star-inserted{
+    display: flex;
+    column-gap: 12px;
+    line-height: 20px;
+    color: #8E8E8E;
+    font-size: 18px;
+    text-transform: uppercase;
+}
+
+.ticketing-journey-select-seats_legend-icon{
+    height: 20px;
+}
+
+.ticketing-journey-select-seats_legend-icon img{
+    height: 20px;
+}
+
+.ticketing-journey-select-seats_screens{
+    margin: 60px 0 60px 0;
+}
+
+.ticketing-journey-select-seats_screens img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.tgv-ticketing-journey-select-seats_layout.ng-star-inserted{
+    flex: 1;
+}
+
+.seats-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.seat-row {
+    display: flex;
+    align-items: center;
+    margin: 5px 0;
+}
+
+.seat {
+    width: 30px;
+    height: 30px;
+    background: #00c6ff;
+    margin: 4px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.seat.sold {
+    background: #e74c3c;
+    cursor: not-allowed;
+}
+
+.seat.selected {
+    background: #f1c40f;
+}
+
+.seat:hover:not(.sold) {
+    transform: scale(1.1);
+}
+
+.seat-label {
+    width: 20px;
+    text-align: center;
+    font-weight: bold;
 }
