Added QR module and fix order image

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -59,6 +59,10 @@
     margin-top: 8px;
 }
 
+.profile-user__qrcode {
+    padding-left: 10px;
+}
+
 .profile-user__qrcode img {
     width: 150px;
     height: 150px;
@@ -724,13 +728,14 @@ select {
 }
 
 .order-card {
+    display: flex;
+    align-items: stretch;
     background-color: #8c0404;
     color: white;
     flex: 0 0 calc(50% - 24px);
-    display: flex;
     border-radius: 10px;
     overflow: hidden;
-}
+  }
 
 @media (max-width: 768px) {
     .order-card {
@@ -744,11 +749,12 @@ select {
     display: flex;
     flex-direction: column;
     gap: 8px;
+    align-items: stretch;
 }
 
 .order-poster {
     width: 200px;
-    height: 200px;
+    height: 100%;
     object-fit: cover;
 }
 
