--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -650,6 +650,13 @@ select {
 }
 
 /* Order Page css */
+.container {
+    width: 100%;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
 .orders-page {
     display: flex;
     flex-direction: column;
@@ -725,9 +732,11 @@ select {
     row-gap: 10px;  
     column-gap: 24px;
     padding: 0 70px;
+    flex-direction: column;
 }
 
 .order-card {
+    width: 100%;
     display: flex;
     align-items: stretch;
     background-color: #8c0404;
