--- a/public/css/movies/checkout.css
+++ b/public/css/movies/checkout.css
@@ -361,6 +361,11 @@
     font-size: 14px;
 }
 
+.swal2-title{
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
 .swal2-title, .swal2-content, .swal2-html-container {
     color: white !important;
 }
@@ -370,8 +375,22 @@
     border-radius: 4px 12px !important;
     background: linear-gradient(to right, #ff1e1e, #b50000) !important;
     transition: all 0.3s ease-in-out !important;
+    text-transform: uppercase;
 }
 
 .swal2-confirm:hover{
     background: linear-gradient(to right, #b50000, #ff1e1e) !important;
+}
+
+.swal2-cancel{
+    background: black;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 4px 12px !important;
+    transition: all 0.3s ease-in-out !important;
+}
+
+.swal2-cancel:hover{
+    color: #ff1e1e;
 }
